--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,5 @@
 {{ "<!-- navigation -->" | safeHTML }}
-<header class="sticky-top navigation">
+<header class=" navigation" >
     <style>
         *{
             box-sizing: border-box;
@@ -14,9 +14,19 @@
     .cart{
    
     position: absolute;
-    top: 37px !important;
+    top: 30px !important;
     right: 50px;
   }
+
+  
+
+
+
+
+
+  .navigation .navbar {
+    padding: 2px 0;
+      }
      
   .llg{
     
